# i18next-turbo

./: .gitignore  .npmignore  CHANGELOG.ja.md  CHANGELOG.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.ja.md  SECURITY.md  TODO.ja.md  TODO.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
.github/: pull_request_template.ja.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.ja.md  bug_report.md  feature_request.ja.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/fixtures/large/: i18next-turbo.json  i18next.config.cjs
benchmarks/fixtures/large/locales/en/: translation.json
benchmarks/fixtures/large/src/: app.ts
docs/: api.ja.md  api.md  installation.ja.md  installation.md  migration-guide.ja.md  migration-guide.md  performance-testing.ja.md  performance-testing.md  test-coverage-comparison.md  troubleshooting.ja.md  troubleshooting.md  usage-examples.ja.md  usage-examples.md
examples/plugins/: custom-extraction-plugin.js  handlebars-plugin.js  html-plugin.js
lib/: index.js
scripts/: generate-bench-fixtures.mjs  package-binary.ps1  package-binary.sh  run-benchmark.mjs  sync-version.mjs
src/: cleanup.rs  config.rs  extractor.rs  fs.rs  json_sync.rs  lib.rs  lint.rs  logging.rs  main.rs  typegen.rs  watcher.rs
src/commands/: check.rs  extract.rs  init.rs  lint.rs  locize.rs  migrate.rs  mod.rs  rename_key.rs  status.rs  sync.rs  typegen.rs
tests/: cli_integration.rs  extraction_patterns.rs  node_wrapper_integration.rs
