[package]
name = "i18next-turbo"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
# CLI & Config
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Filesystem & Glob
glob = "0.3"
walkdir = "2.4"
notify-debouncer-mini = "0.4"  # For watch mode with debouncing
fs2 = "0.4"  # Cross-platform file locking for data integrity
tempfile = "3.10"  # Safe atomic file operations (avoids EXDEV errors on cross-mount)

# Parallelism
rayon = "1.8"

# AST Parsing (SWC)
swc_common = { version = "18", features = ["tty-emitter"] }
swc_ecma_parser = "32"
swc_ecma_ast = "19"
swc_ecma_visit = "19"

# Regex for comment extraction
regex = "1.10"
httpdate = "1.0"

# Unicode normalization for consistent key handling
unicode-normalization = "0.1"

# ICU plural rules for language-aware plural category detection
icu_locid = { version = "1", features = ["serde"] }
icu_plurals = { version = "1", features = ["compiled_data"] }

# NAPI (Node-API) for Node.js integration
napi = { version = "2", optional = true, features = ["napi4", "napi5", "napi6", "napi7", "napi8"] }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = "2.2"  # Using 2.2.0 for Rust 1.87 compatibility

[profile.release]
lto = true              # Link Time Optimization for smaller binary
codegen-units = 1       # Better optimization (slower compile, faster/smaller binary)
strip = true            # Remove debug symbols
panic = "abort"         # No unwinding, smaller binary
opt-level = "z"         # Optimize for size
